login page done ✔✔

--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://media-exp1.licdn.com/dms/image/C4D0BAQHjtkPKC6OWRA/company-logo_200_200/0/1612540117028?e=2159024400&v=beta&t=GjOihCXdYMOPDWthdzYFe3dH9yC-MDWlNbM2sDzOZns" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
-    <title>Visitors management System</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href="https://media-exp1.licdn.com/dms/image/C4D0BAQHjtkPKC6OWRA/company-logo_200_200/0/1612540117028?e=2159024400&v=beta&t=GjOihCXdYMOPDWthdzYFe3dH9yC-MDWlNbM2sDzOZns" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" />
+		<link
+			rel="stylesheet"
+			type="text/css"
+			charset="UTF-8"
+			href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+		<title>Visitors management System</title>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.jsx"></script>
+	</body>
 </html>
